tests/fail/02-theme.rs
use dialogue_core::Asker;
#[derive(Asker)]
#[theme(abc)]
struct User{
    name: String,
    age: u8,
}

fn main() {}
